Added support for updating users
